--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "gkp",
-  "version": "0.0.1",
+  "version": "0.1.3",
   "description": "",
   "main": "index.js",
-  "scripts": {
+  "bin": {
+    "gkp": "./cli.js"
   },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -13,9 +15,16 @@
     "acorn-walk": "^7.1.1",
     "concat-with-sourcemaps": "^1.1.0",
     "resolve-from": "^5.0.0",
-    "source-map": "^0.7.3"
+    "source-map": "^0.7.3",
+    "typed-cli": "^0.2.6"
   },
   "files": [
-    "./readme.md"
+    "index.js",
+    "index.d.ts",
+    "cli.js",
+    "cli.d.ts",
+    "src/**/*.js",
+    "src/**/*.d.ts",
+    "readme.md"
   ]
 }
